Added get email

--- a/contact-api/.env
+++ b/contact-api/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://shubham:shubham@cluster0.daxqxgg.mongodb.net/
+MONGO_URI=mongodb+srv://yshrestha2006_db_user:Nkshres123%23@cluster0.mtmwtns.mongodb.net/?appName=Cluster0
 PORT=5000
